license = "MIT OR Apache-2.0"

[workspace]
members = [
  # "examples/*",
  # "examples/candy-cane",
  # "examples/cartoon-water",
  # "examples/compute-3d",
  # "examples/compute-with-time",
  # "examples/cube-wave",
  "examples/dissolve-sphere-standard-material-extensions",
  "examples/fresnel-effect",
  # "examples/infinite-tunnel",
  # "examples/pointcloud",
  "examples/pressure-wave-sphere",
  "examples/rotating-column",
  "examples/shader-rgb-worldspace-cube",
  "examples/shader-test-001",
  "examples/shield-spheres",
  "examples/shield-with-depth",
  # "examples/spacecraft-noiseland",
  "examples/standard-material-quixel-megascan",
  "libs/*",
  # "vendor/bevy_asset_loader/bevy_asset_loader_derive",
  # "vendor/bevy_asset_loader/bevy_asset_loader",
  # , "vendor/bevy/crates/*"
  "wgpu/dependencies",
  "wgpu/surface",
  "wgpu/pipeline",
  "wgpu/buffers",
  "wgpu/textures",
  "wgpu/camera",
  "wgpu/instancing",
  "wgpu/depth"
]

resolver = "2"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.0"
bevy_asset_loader = "0.16.0"
bevy_basic_camera = { path = "./libs/bevy_basic_camera" }
bevy_shader_utils = { path = "./libs/bevy_shader_utils" }
bevy_prepass_debug = { path = "./libs/bevy_prepass_debug" }

env_logger = "0.10.0"
wgpu = "0.15.1"
winit = "0.28.3"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ['derive'] }
image = "0.24.6"
anyhow = "1.0.70"
cgmath = "0.18.0"
