license = "MIT OR Apache-2.0"

[workspace]
members = [
  "wgpu/dependencies",
  "wgpu/surface",
  "wgpu/pipeline",
  "wgpu/buffers",
  "wgpu/textures",
  "wgpu/camera",
  "wgpu/instancing",
  "wgpu/depth",
  "bevy/hello",
  "bevy/gpucomputehello",
  "bevy/sand",
  "bevy/snooker"
]

resolver = "2"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.1"
bevy_asset_loader = "0.17.0"

env_logger = "0.10.0"
wgpu = "0.15.1"
winit = "0.28.3"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ['derive'] }
image = "0.24.6"
anyhow = "1.0.70"
cgmath = "0.18.0"
