license = "MIT OR Apache-2.0"

[workspace]
members = [
  "hello",
  "gpucomputehello",
  "sand",
  "snooker",
  "downhill"
]

resolver = "2"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.23.0", features = [ "simd-stable", "debug-render-3d" ] }

env_logger = "0.10.2"
bytemuck = {version = "1.15.0", features = ['derive'] }
anyhow = "1.0.81"
rand = "0.8.5"
