license = "MIT OR Apache-2.0"

[workspace]
members = [
  "dependencies",
  "surface",
  "pipeline",
  "buffers",
  "textures",
  "camera",
  "instancing",
  "depth",
]

resolver = "2"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
env_logger = "0.10.0"
wgpu = "0.15.1"
winit = "0.28.3"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ['derive'] }
image = "0.24.6"
anyhow = "1.0.70"
cgmath = "0.18.0"
